# clog

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.claude/rules/: openwolf.md
.claude/skills/release/: SKILL.md
.wolf/: anatomy.md  buglog.json  cerebrum.md  config.json  identity.md
.wolf/hooks/: _session.json
crates/clog-app/: Cargo.toml  installer.nsi  tauri.conf.json
crates/clog-app/capabilities/: default.json
crates/clog-app/src/: channels.rs  main.rs  paths.rs  persistence.rs  update.rs
crates/clog-core/: Cargo.toml
crates/clog-core/examples/: fake_tailer.rs
crates/clog-core/src/: idx_cache.rs  index.rs  lib.rs  pattern.rs  record.rs  regex_scanner.rs  search.rs  slow_requests.rs  source.rs  tail.rs  thread_groups.rs
crates/clog-core/tests/: pattern_proptest.rs
design/: icon.psd
docs/: build-phases.md  design.md  future-ideas.md
docs/superpowers/plans/: 2026-05-23-minimap-heatmap.md  2026-05-23-slow-request-insights.md  2026-05-24-thread-insights.md  2026-05-27-zen-mode.md  2026-05-28-collapse-records.md  2026-05-30-truncate-logs.md
docs/superpowers/specs/: 2026-05-23-minimap-heatmap-design.md  2026-05-23-slow-request-insights-design.md  2026-05-24-thread-insights-design.md  2026-05-26-auto-update-design.md  2026-05-27-collapse-records-design.md  (+2 more)
scripts/: make-latest-json.ps1  make-portable-zip.ps1  release.ps1
ui/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
ui/src/: App.vue  collapse.test.ts  collapse.ts  style.css  tab.ts  truncate.test.ts  types.ts
(+38 files in other folders)
