[package]
name = "clog-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
regex = "1"

[dev-dependencies]
proptest = "1"
